--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,18 +33,23 @@ jobs:
                   elif [ "${{ github.ref }}" = "$DEV_BRANCH" ]; then
                     echo "DEPLOY_DIR=$DEV_DIR" >> $GITHUB_ENV
                   fi
-            # 通过 SSH 在服务器上部署
-            - name: Deploy to Server
-              uses: appleboy/ssh-action@master
+            - name: Setup SSH
+              uses: webfactory/ssh-agent@v0.8.0
               with:
-                  host: ${{ secrets.SERVER_HOST }}
-                  username: ${{ secrets.SERVER_USER_NAME }}
-                  key: ${{ secrets.SERVER_KEY }}
-                  script: |
-                      TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-                      DEPLOY_DIR_PRE="${DEPLOY_DIR}"
-                      DEPLOY_DIR="${DEPLOY_DIR}/${TIMESTAMP}"
+                  ssh-private-key: ${{ secrets.SERVER_KEY }}
+            - name: Deploy
+              env:
+                  # DEPLOY_PATH: "/www/wwwroot/todo-list" # 部署路径
+                  DEPLOY_USER: ${{ secrets.SERVER_USER_NAME }}
+                  DEPLOY_HOST: ${{ secrets.SERVER_HOST }}
+              run: |
+                  # 首先添加服务器到已知主机
+                  ssh-keyscan -H $DEPLOY_HOST >> ~/.ssh/known_hosts
 
-                      mkdir -p ${DEPLOY_DIR}
-                      scp -r dist/* $DEPLOY_USER@$DEPLOY_HOST:${DEPLOY_DIR}/
-                      ln -sfn ${DEPLOY_DIR} ${DEPLOY_DIR_PRE}/current
+                  TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+                  DEPLOY_DIR_PRE="${DEPLOY_DIR}"
+                  DEPLOY_DIR="${DEPLOY_DIR}/${TIMESTAMP}"
+
+                  ssh $DEPLOY_USER@$DEPLOY_HOST "mkdir -p ${DEPLOY_DIR}"
+                  scp -r dist/* $DEPLOY_USER@$DEPLOY_HOST:${DEPLOY_DIR}/
+                  ssh $DEPLOY_USER@$DEPLOY_HOST "ln -sfn ${DEPLOY_DIR} ${DEPLOY_DIR_PRE}/current"
