--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
         branches: [main, develop]
 
 jobs:
-    build:
+    Deploy:
         runs-on: ubuntu-latest
         environment:
             name: ${{ github.ref == 'refs/heads/main' && 'production' || 'development' }}
